# zanthe

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  readme.md  transcript.txt
src/: cli.rs  game.rs  helper.rs  interface.rs  lib.rs  loader.rs  main.rs
src/game/: address.rs  alphabet.rs  cursor.rs  error.rs  input_code.rs  instruction.rs  memory.rs  mod.rs  operand.rs  property.rs  routine.rs  stack.rs  state.rs
src/game/instruction/: context.rs  form.rs  instruction.rs  instruction_set.rs  mod.rs  op_code.rs  operand.rs  operand_set.rs  result.rs
src/game/instruction/instruction_set/: common.rs  mod.rs  version_gte3.rs  version_gte4.rs  version_gte5.rs
src/interface/: screen.rs  terminal.rs
src/interface/terminal/: window.rs
src/loader/: blorb.rs  iff.rs
src/ui/: echo.rs  interface.rs  mod.rs  null.rs  screen.rs  terminal.rs  text_style.rs
src/ui/interface/: echo.rs  mod.rs  terminal.rs
src/ui/interface/terminal/: mod.rs  text_blob.rs  window.rs
