[package]
name = "zanthe"
version = "0.1.0"
authors = ["Morgan Fogg"]
edition = "2018"
publish = false

[dependencies]
rand = "0.8.3"
clap = "2.33"
itertools = "0.10"
crossterm = "0.19"
anyhow = "1.0"
backtrace = "0.3"
num-derive = "0.3"
num-traits = "0.2"
tracing = "0.1"
tracing-appender = "0.1"
tracing-subscriber = "0.2"
