[package]
name = "zanthe"
version = "0.1.0"
authors = ["Morgan Fogg"]
edition = "2021"
publish = false

[dependencies]
rand = "0.8"
clap = {version = "4.0", features=["derive"]}
itertools = "0.10"
crossterm = "0.25"
anyhow = "1.0"
backtrace = "0.3"
num-derive = "0.3"
num-traits = "0.2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
